# Jnane-Oumans-Billing

./: .gitignore  README.md
JnaneOumnas/: CMakeLists.txt  Images.qrc  Main.qml  MainPage.qml  bill.cpp  bill.h  billitem.cpp  billitem.h  main.cpp  tablemodel.cpp  tablemodel.h
